fix some bug with grid, have a problem with z-index

--- a/trafalgar/css/style.css
+++ b/trafalgar/css/style.css
@@ -9,6 +9,9 @@ html {
   font-size: 62.5%; }
 
 body {
+  box-sizing: border-box; }
+
+body {
   font-family: 'Mulish', sans-serif;
   font-weight: 700;
   color: #000000; }
@@ -124,14 +127,17 @@ body {
   height: 35.4rem;
   padding: 5.4rem 4.7rem 4rem 3.7rem;
   box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.5);
-  border-radius: 20px; }
+  border-radius: 20px;
+  z-index: 5; }
   .service-item__img {
     margin-bottom: 2.2rem; }
 
 .services {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  position: relative;
+  z-index: 0; }
   .services__text-block {
     display: flex;
     flex-direction: column;
@@ -152,3 +158,8 @@ body {
     row-gap: 3.3rem;
     column-gap: 3.7rem;
     margin-bottom: 7.2rem; }
+  .services__dots {
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    top: 50%; }
