--- a/trafalgar/sass/base/_reset.scss
+++ b/trafalgar/sass/base/_reset.scss
@@ -9,3 +9,6 @@
 html {
 	font-size: 62.5%;
 }
+body {
+	box-sizing: border-box;
+}
