--- a/trafalgar/sass/components/_service-item.scss
+++ b/trafalgar/sass/components/_service-item.scss
@@ -5,6 +5,7 @@
 
 	box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.5);
 	border-radius: 20px;
+	z-index: 5;
 
 	&__img {
 		margin-bottom: 2.2rem;
