--- a/trafalgar/sass/pages/_home.scss
+++ b/trafalgar/sass/pages/_home.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
+	z-index: 0;
 
 	&__text-block {
 		display: flex;
@@ -21,7 +23,7 @@
 		background-color: $color-black;
 		margin-bottom: 3.3rem;
 	}
-
+	
 	&__grid {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
@@ -29,5 +31,12 @@
 		row-gap: 3.3rem;
 		column-gap: 3.7rem;
 		margin-bottom: 7.2rem;
+	}
+
+	&__dots {
+		position: absolute;
+		z-index: -1;
+		right: 0;
+		top: 50%;
 	}
 }
